Fix contrast in account verified text
The contrast value was 1.75, which makes the text hard to read and it
isn't even near to the minimum accessibility requirements.

We're using the `$color-success` variable since the `$check` color is
green and this one is green too.

--- a/app/assets/stylesheets/account/verify-account.scss
+++ b/app/assets/stylesheets/account/verify-account.scss
@@ -3,11 +3,11 @@
 
   .already-verified {
     @include has-fa-icon(check, solid);
-    color: $check;
+    color: $color-success;
     line-height: $line-height * 2;
 
     &::before {
-      color: $text-medium;
+      color: $check;
       font-size: 1.4em;
     }
   }
